# ai_language_tutor

./: .env.example  .gitignore  LICENSE.md  README.md  manage.py  package-lock.json  package.json  pyproject.toml
ai_tutor/: asgi.py  settings.py  urls.py  wsgi.py
chat/: chat.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/: index.html
chat/templates/chat/: index.html  room.html
dashboard/: views.py
dashboard/templates/: profile.html
dashboard/templates/dashboard/: index.html  profile.html
static/css/: output.css
templates/: base.html
templates/allauth/elements/: button.html  field.html  fields.html  form.html  h1.html  h2.html  provider.html  provider_list.html
templates/allauth/layouts/: base.html
