[project]
name = "ai-language-tutor"
version = "0.1.0"
description = "Chat application for an AI language tutor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "django>=5.1.7",
    "django-allauth[socialaccount]>=65.5.0",
    "django-environ>=0.12.0",
    "openai>=1.66.3",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
